fix: fix horizontal scroll

--- a/src/styles/layouts/_layouts.scss
+++ b/src/styles/layouts/_layouts.scss
@@ -4,6 +4,7 @@
 }
 
 .main__container {
+    width: 85%;
     margin-left: 15%;
     padding-top: 5rem;
     padding-left: 5rem;
